# popsicle

./: README.md
cli/: Cargo.toml
lambda-function/: .gitignore  Cargo.toml  Cross.toml  README.md  main.tf  outputs.tf  versions.tf
lambda-function/modules/lambda_function/: main.tf  outputs.tf  variables.tf
lambda-function/src/: main.rs
profiler/: Cargo.toml  README.md
profiler/src/: lib.rs  log.rs  main.rs  profiler.rs  tls.rs
tui/: Cargo.toml  README.md
tui/src/: app.rs  crossterm.rs  main.rs  ui.rs
