[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
ttfb = "1.6.0"
rustls = "0.20.8"
webpki-roots = "0.22.6"
native-tls = "0.2.11"
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
