[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
native-tls = "0.2.11"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.26"
tokio-native-tls = "0.3.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
